--- a/index.html
+++ b/index.html
@@ -388,18 +388,26 @@
         tbody.innerHTML = "";
 
         Object.entries(PURITY).sort((a, b) => b[1] - a[1]).forEach(([carat, purity]) => {
-          const purePrice = goldJodPerGram * purity;
-          const buy = purePrice * markupMultiplier - 1;
-          const sell = purePrice * markupMultiplier + 1;
+  const goldPricePerOunceInJOD = (1 / goldUsdPerOz) * usdToJod;
+  
+  // Shop Selling Price: Add 7.38 JOD
+  const adjustedOunceSell = goldPricePerOunceInJOD + 7.08 + 0.30;
+  const pricePerGramSell = (adjustedOunceSell / 31.1035) * purity;
 
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td>${carat}</td>
-            <td>د.ا ${buy.toFixed(2)}</td>
-            <td>د.ا ${sell.toFixed(2)}</td>
-          `;
-          tbody.appendChild(row);
-        });
+  // Buying from customers: Subtract 2.5 JOD from price per gram
+  const baseGram = (goldPricePerOunceInJOD / 31.1035) * purity;
+  const pricePerGramBuy = baseGram - 2.5;
+
+  const row = document.createElement("tr");
+  row.innerHTML = `
+    <td>${carat}</td>
+    <td>د.ا ${pricePerGramBuy.toFixed(2)}</td>
+    <td>د.ا ${pricePerGramSell.toFixed(2)}</td>
+  `;
+  tbody.appendChild(row);
+});
+
+    
 
         document.getElementById("last-update").textContent =
           "Last update: " + new Date().toLocaleTimeString();
