--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
     }
 
     h1 {
-      font-size: 2.9vh;
-      color: var(--primary-color);
-      margin: 0.5vh 0;
-      text-align: center;
+  font-size: 2.9vh;
+  color: var(--primary-color);
+  margin: 5vh 0 1vh 0; /* Top margin increased */
+  text-align: center;
+}
+
     }
 
     #datetime, #last-update {
