--- a/index.html
+++ b/index.html
@@ -127,11 +127,16 @@
 
     }
 
-    #datetime, #last-update {
-      font-size: 1.8vh;
-      color: #888;
-      text-align: center;
-      margin: 0.3vh 0;
+   #datetime, #last-update {
+  font-size: 2.2vh;
+  color: #666;
+  text-align: center;
+  margin: 1vh auto;
+  width: 100%;
+  max-width: 100%;
+  display: block;
+}
+
     }
 
     .top-controls {
