--- a/index.html
+++ b/index.html
@@ -127,14 +127,12 @@
 
     }
 
-   #datetime, #last-update {
-  font-size: 2.2vh;
-  color: #666;
-  text-align: center;
-  margin: 1vh auto;
-  width: 100%;
-  max-width: 100%;
-  display: block;
+    #datetime, #last-update {
+      font-size: 1.8vh;
+      color: #888;
+      text-align: center;
+      margin: 0.3vh 0;
+    }
 }
 
     }
