--- a/index.html
+++ b/index.html
@@ -128,10 +128,14 @@
     }
 
     #datetime, #last-update {
-      font-size: 1.8vh;
-      color: #888;
-      text-align: center;
-      margin: 0.3vh 0;
+  font-size: 2.2vh;
+  color: #666;
+  text-align: center;
+  margin: 0.5vh auto;
+  display: block;
+  width: fit-content;
+}
+
     }
 }
 
