--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@ const PRICE_THRESHOLD = 20;
     setInterval(updateClock, 1000);
     setInterval(updatePriceTable, 7200000); // Update prices every 2 hours
     setInterval(rotateInfo, 10000); // Rotate messages every 10 seconds
+    setInterval(toggleLanguage, 60000); // Auto toggle language every 60 seconds
   </script>
 </body>
 </html>
